--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
     top: 0;
     background: inherit;
     box-shadow: 0 0 var(--spacing) var(--back);
+    width: 100%;
 } #main_header h1 {
     margin-top: var(--medium-spacing);
     line-height: 1;
