Faster list gen, css stuff, trying to sync csv to cdn

--- a/css/footer.css
+++ b/css/footer.css
@@ -9,4 +9,6 @@
     justify-content: center;
 } #main_footer p {
     font-size: var(--font-xsmall);
+} #main_footer a {
+    font-size: inherit;
 }
