--- a/css/global.css
+++ b/css/global.css
@@ -63,6 +63,6 @@ table {
 } th {
     font-weight: bold;
 } th, td {
-    min-width: 10rem;
-    max-height: 1rem;
+    min-width: 8rem;
+    height: 1rem;
 }
