--- a/css/header.css
+++ b/css/header.css
@@ -51,3 +51,9 @@
 } #main_header h1 a:hover, #main_header h1 a:focus, #main_header h1 a:focus-visible {
     opacity: 0.65;
 }
+#visits {
+    position: absolute;
+    right: 1rem;
+    top: 0;
+    font-size: var(--font-xsmall);
+}
