--- a/css/article.css
+++ b/css/article.css
@@ -26,4 +26,6 @@ article {
     margin: calc(var(--spacing) - 0.5rem) 0;
 } article p {
     margin: calc(var(--spacing) - 0.5rem) 0;
+} article ul {
+    margin: var(--spacing) 0;
 }
