--- a/css/header.css
+++ b/css/header.css
@@ -52,7 +52,7 @@
     opacity: 0.65;
 }
 #visits {
-    position: absolute;
+    position: fixed;
     right: 1rem;
     top: 0;
     font-size: var(--font-xsmall);
