--- a/css/vars.css
+++ b/css/vars.css
@@ -12,6 +12,7 @@
     --font-xsmall: 65%;
     --line-height: 1.75rem;
     --item-size: 10rem;
+    --item-size-half: 5rem;
     --icon-size: 2rem;
     --spacing: 1rem;
     --medium-spacing: 0.75rem;
