--- a/css/header.css
+++ b/css/header.css
@@ -55,5 +55,11 @@
     position: fixed;
     right: 1rem;
     top: 0;
-    font-size: var(--font-xsmall);
+    font-size: var(--font-small);
+}
+#sitemap {
+    position: fixed;
+    left: 1rem;
+    top: 0;
+    font-size: var(--font-small);
 }
