--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,4 +42,8 @@
     } #main_footer p {
         font-size: calc(var(--font-xsmall) - 10%) !important;
     }
+    #sitemap {
+        left: unset !important;
+        right: 1rem;
+    }
 }
